--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   width: 22rem;
   margin: 0;
   padding: 0;
+
 }
 
 ::-webkit-scrollbar {
@@ -16,6 +17,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 1rem;
+  
 }
 
 .header_log img {
@@ -27,20 +29,20 @@ body {
 #heading {
   text-align: center;
   margin: 2em;
-  color: rgb(255, 230, 0);
+  color: rgb(0, 0, 0);
   font-size: 1.2em;
 }
 
 .header_network p {
-  border: 1px solid #5c6400;
-  color: #ffffff;
-  font-weight: bold;
-  padding: 0.5rem 1rem;
+  border: 1px solid #bbbdab;
+  color: #000000;
+  font-weight: 300;
+  padding: 0.1rem 0.3rem;
   border-radius: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 0.3rem;
+  gap: 0.1rem;
   cursor: pointer;
 }
 /* //NETWORK */
@@ -48,7 +50,8 @@ body {
 .network {
   display: none;
   position: absolute;
-  background-color: #050505;
+  
+  background-color: #ffffff;
   width: 100%;
   right: 0;
   text-align: center;
@@ -60,13 +63,16 @@ body {
 }
 
 .network_title {
-  font-size: 1.3rem;
-  border: 1px solid rgb(225, 255, 0);
+  font-size: 1rem;
+  border: 0.2px solid rgb(255, 255, 255);
+  
+ 
 }
 
 .network_item {
   padding: 0.5rem 4rem;
   font-size: 0.9rem;
+  color: #000000;
   display: grid;
   grid-template-columns: 1fr 3fr;
   cursor: pointer;
@@ -77,7 +83,7 @@ body {
 
 .home_screen_signup {
   margin: 0 auto;
-  background-color: #000000;
+  background-color: #ffffff;
   text-align: center;
   padding: 2rem;
   display: none;
@@ -89,7 +95,7 @@ body {
 }
 
 .home_title {
-  color: rgb(214, 166, 75);
+  color: rgb(3, 0, 0);
   font-size: 1.2em;
   cursor: pointer;
 }
@@ -112,14 +118,14 @@ body {
 .home_header p,
 .home_screen_login p,
 .home_screen_signup p {
-  background-image: linear-gradient(163deg, #fcfcfc 0%, #ffffff 100%);
+  background-image: linear-gradient(163deg, #000000 0%, #000000 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 .home_screen_login {
   margin: 0 auto;
-  background-color: #000000;
+  background-color: #ffffff;
   text-align: center;
   padding: 2rem;
   display: block;
@@ -127,7 +133,7 @@ body {
 
 .create_popUp {
   margin: 0 auto;
-  background-color: #000000;
+  background-color: #ffffff;
   text-align: center;
   padding: 2rem;
   display: none;
@@ -135,11 +141,13 @@ body {
   text-align: center;
 }
 
+
 /* //FORM  */
 
 .transfer_form {
   display: none;
 }
+
 
 .form {
   display: flex;
@@ -148,7 +156,7 @@ body {
   padding-left: 2em;
   padding-right: 2em;
   padding-bottom: 0.4em;
-  background-color: #000000;
+  background-color: #ffffff;
 }
 
 .field {
@@ -161,14 +169,14 @@ body {
   border: none;
   outline: none;
   color: white;
-  background-color: #171717;
-  box-shadow: inset 2px 5px 10px rgb(54, 48, 48);
+  background-color: #ffffff;
+  box-shadow: inset 2px 5px 10px rgb(200, 195, 195);
 }
 
 .input-icon {
   height: 1.3em;
   width: 1.3em;
-  fill: rgb(0, 255, 200);
+  fill: rgb(0, 63, 115);
 }
 
 .input-field {
@@ -176,7 +184,7 @@ body {
   border: none;
   outline: none;
   width: 100%;
-  color: rgb(0, 192, 151);
+  color: rgb(0, 0, 0);
 }
 
 .form .btn {
@@ -228,17 +236,17 @@ body {
   border: none;
   outline: none;
   transition: 0.4s ease-in-out;
-  background-image: linear-gradient(163deg, #ffbf00 0%, #ffa600 100%);
-  color: rgb(0, 0, 0);
+  background-image: linear-gradient(163deg, #7177f7 0%, #3c278a 100%);
+  color: rgb(255, 255, 255);
 }
 
 .button3:hover {
-  background-image: linear-gradient(163deg, #959313fa 0%, #984715 100%);
+  background-image: linear-gradient(163deg, #d3be02fa 0%, #895207 100%);
   color: rgb(255, 255, 255);
 }
 
 .card {
-  background-image: linear-gradient(163deg, #ff9100 0%, #3700ff 100%);
+  background-image: linear-gradient(163deg, #ffffff 0%, #ffffff 100%);
   /* border-radius: 22px; */
   transition: all 0.3s;
 }
@@ -260,7 +268,7 @@ body {
 /* notification */
 small,
 p {
-  color: #fff;
+  color: #000000;
   text-align: center;
 }
 
@@ -383,9 +391,11 @@ textarea {
 
 .home {
   margin: 0 auto;
-  background-color: #171717;
+  background-color: #ffffff;
   text-align: center;
   padding: 1rem 2rem;
+  border: 0.2px solid rgb(247, 244, 244);
+  border-radius: 1rem;
   display: none;
 }
 
@@ -415,7 +425,7 @@ textarea {
 
 .home_feature_item > p {
   line-height: 0;
-  color: #00ff75;
+  color: #020036;
 }
 
 .home_tabs {
@@ -431,7 +441,7 @@ textarea {
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   grid-area: 2rem;
-  border-top: 1px solid #00ff75;
+  border-top: 1px solid #007838;
   padding: 1rem 0;
 }
 
@@ -473,7 +483,7 @@ textarea {
 .lists {
   display: grid;
   grid-template-columns: 0.1fr 5fr;
-  border-bottom: 1px solid #00ff75;
+  border-bottom: 1px solid #01f372;
   align-items: center;
 }
 
