--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body {
 .import_account .connectWallet,
 .import_token .connectWallet,
 .transfer_form .connectWallet,
+.nft_form .connectWallet,
 .create_popUp .connectWallet,
 .home_screen_login .connectWallet,
 .home_screen_signup .connectWallet {
@@ -139,6 +140,10 @@ body {
 }
 
 /* //FORM  */
+
+.nft_form {
+  display: none;
+}
 
 .transfer_form {
   display: none;
